--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 :root{
-    --warna1:#5d3c00;
-    --warna2:#ff0000c7;
+    --warna1:#ffffff;
+    --warna2:#ff0000;
+    --warna3:rgba(0, 0, 0, 0.6);
+    --warna4:rgb(111, 111, 111);
 }
 
 *{
@@ -14,10 +16,11 @@
 }
 
 html{
-    font-size: 62.5%;
+    font-size: 100%;
     scroll-behavior: smooth;
     scroll-padding-top: 6rem;
     overflow-x: hidden;
+    background: var(--warna4);
 }
 
 section{
@@ -26,11 +29,11 @@ section{
 
 .heading{
     text-align: center;
-    font-size: 4rem;
+    font-size: 2rem;
     color: var(--warna2);
     padding:1rem;
     margin:2rem 0;
-    background:rgba(255, 51, 153,.05);
+    background:var(--warna3);
 }
 
 .heading span{
@@ -40,24 +43,24 @@ section{
 .btn{
     display: inline-block;
     margin-top: 1rem;
-    border-radius: 5rem;
+    border-radius: .5rem;
     background: var(--warna2);
     color:#fff;
     padding:.9rem 3.5rem;
     cursor: pointer;
-    font-size: 1.7rem;
+    font-size: 1rem;
 }
 
 .btn:hover{
     background:var(--warna1);
-    transform: scale(1.1);
+    color: var(--warna3);
 }
 
 header{
     position: fixed;
     top:0; left:0; right:0;
-    background:#fff;
-    padding:2rem 9%;
+    background:var(--warna3);
+    padding:1rem 9%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -66,7 +69,7 @@ header{
 }
 
 header .logo{
-    font-size: 3rem;
+    font-size: 2rem;
     color: var(--warna2);
     font-weight: bolder;
 }
@@ -76,9 +79,9 @@ header .logo span{
 }
 
 header .navbar a{
-    font-size: 2rem;
+    font-size: 1.2rem;
     padding:0 1.5rem;
-    color:#666;
+    color:var(--warna1);
 }
 
 header .navbar a:hover{
@@ -86,7 +89,7 @@ header .navbar a:hover{
 }
 
 header .icons a{
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     color: var(--warna2);
     margin-left: 1.5rem;
 }
@@ -100,7 +103,7 @@ header #toggler{
 }
 
 header .fa-bars{
-    font-size: 3rem;
+    font-size: 2rem;
     color: var(--warna2);
     border-radius: .5rem;
     padding:.5rem 1.5rem;
@@ -109,376 +112,214 @@ header .fa-bars{
     display: none;
 }
 
-.home{
+
+
+/* Produck yang dijual start */
+/* CSS */
+.products h1.search{
     display: flex;
-    align-items: center;
-    min-height: 100vh;
-    background:url(../images/home-bg.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-.home .content{
-    max-width: 50rem;
-}
-
-.home .content h3{
-    font-size: 6rem;
-    color: var(--warna2);
-}
-
-.home .content span{
-    font-size: 3.5rem;
+    justify-content: center;
+    margin-bottom: 2rem;
+    margin-top: 4rem;
+    font-size: 2rem;
     color: var(--warna1);
-    padding:1rem 0;
-    line-height: 1.5;
 }
-
-.home .content p{
-    font-size: 1.5rem;
+.search-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+#search-input {
+    padding: .6rem;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-right: 10px;
+    font-size: 1.2rem;
+    width: 60rem;
+    background-color: var(--warna4);
     color: var(--warna1);
-    padding:1rem 0;
-    line-height: 1.5;
 }
-
-.about .row{
-    display: flex;
-    align-items: center;
-    gap:2rem;
-    flex-wrap: wrap;
-    padding:2rem 0;
-    padding-bottom: 3rem;
+#search-button {
+    padding: .8rem 1.5rem;
+    background-color: var(--warna2);
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 14px;
 }
-
-.about .row .video-container{
-    flex:1 1 40rem;
-    position: relative;
+#search-button:hover {
+    background-color: var(--warna3);
 }
-
-.about .row .video-container video{
-    width:100%;
-    border:1.5rem solid #fff;
-    border-radius: .5rem;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-    height: 100%;
-    object-fit: cover;
-}
-
-.about .row .video-container h3{
-    position: absolute;
-    top:50%; transform: translateY(-50%);
-    font-size: 3rem;
-    background:#fff;
-    width:100%;
-    padding:1rem 2rem;
-    text-align: center;
-    mix-blend-mode: screen;
-}
-
-.about .row .content{
-    flex:1 1 40rem;
-}
-
-.about .row .content h3{
-    font-size: 3rem;
-    color: var(--warna2);
-}
-
-.about .row .content p{
-    font-size: 1.5rem;
-    color:#999;
-    padding:.5rem 0;
-    padding-top: 1rem;
-    line-height: 1.5;
-}
-
-.icons-container{
-    background:#eee;
-    display: flex;
-    flex-wrap: wrap;
-    gap:1.5rem;
-    padding-top: 5rem;
-    padding-bottom: 5rem;
-}
-
-.icons-container .icons{
-    background:#fff;
-    border:.1rem solid rgba(0,0,0,.1);
-    padding:2rem;
-    display: flex;
-    align-items: center;
-    flex:1 1 25rem;
-}
-
-.icons-container .icons img{
-    height:5rem;
-    margin-right: 2rem;
-}
-
-.icons-container .icons h3{
-    color: var(--warna2);
-    padding-bottom: .5rem;
-    font-size: 1.5rem;
-}
-
-.icons-container .icons span{
-    color:#555;
-    font-size: 1.3rem;
-}
-
+#search-button:active {
+    background-color: #3d8b40;
+}  
 .products .box-container{
     display: flex;
     flex-wrap: wrap;
     gap:1.5rem;
 }
-
-.products .box-container .box{
+.products .box-container .box-penjualan {
     flex:1 1 30rem;
     box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
     border-radius: .5rem;
     border:.1rem solid rgba(0,0,0,.1);
-    position: relative;    
+    position: relative;
+    background: var(--warna3);
 }
-
-.products .box-container .box .discount{
-    position: absolute;
-    top:1rem; left:1rem;
-    padding:.7rem 1rem;
-    font-size: 2rem;
-    color:var(--warna2);
-    background:rgba(255, 51, 153,.05);
-    z-index: 1;
-    border-radius: .5rem;
-}
-
-.products .box-container .box .image{
+.products .box-container .box-penjualan .image{
     position: relative;
     text-align: center;
     padding-top: 2rem;
     overflow:hidden;
 }
-
-.products .box-container .box .image img{
-    height:25rem;
+.products .box-container .box-penjualan .image img{
+    height:20rem;
 }
-
-.products .box-container .box:hover .image img{
+.products .box-container .box-penjualan:hover .image img{
     transform: scale(1.1);
 }
-
-.products .box-container .box .image .icons{
+.products .box-container .box-penjualan .image .icons{
     position: absolute;
     bottom:-7rem; left:0; right:0;
     display: flex;
 }
-
-.products .box-container .box:hover .image .icons{
+.products .box-container .box-penjualan:hover .image .icons{
     bottom:0;
 }
-
-.products .box-container .box .image .icons a{
-    height: 5rem;
-    line-height: 5rem;
-    font-size: 2rem;
+.products .box-container .box-penjualan .image .icons a{
+    height: 3rem;
+    line-height: 3rem;
+    font-size: 1.3rem;
     width:50%;
     background:var(--warna1);
-    color:#fff;
+    color:var(--warna3);
 }
-
-.products .box-container .box .image .icons .cart-btn{
+.products .box-container .box-penjualan .image .icons .cart-btn{
     border-left: .1rem solid #fff7;
     border-right: .1rem solid #fff7;
     width:100%;
 }
-
-.products .box-container .box .image .icons a:hover{
+.products .box-container .box-penjualan .image .icons a:hover{
     background: var(--warna2);
 }
-
-.products .box-container .box .content{
+.products .box-container .box-penjualan .content{
     padding:2rem;
     text-align: center;
 }
-
-.products .box-container .box .content h3{
-    font-size: 2.5rem;
+.products .box-container .box-penjualan .content h3{
+    font-size: 1.8rem;
     color: var(--warna2);
 }
-
-.products .box-container .box .content .price{
-    font-size: 2.5rem;
+.products .box-container .box-penjualan .content .price{
+    font-size: 1.5rem;
     color:var(--warna1);
     font-weight: bolder;
     padding-top: 1rem;
 }
-
-.products .box-container .box .content .price span{
-    font-size: 1.5rem;
-    color:#999;
-    font-weight: lighter;
-    text-decoration: line-through;
-}
-
-.review .box-container{
+.products .pagination {
     display: flex;
-    flex-wrap: wrap;
-    gap:1.5rem;
-}
-
-.review .box-container .box{
-    flex:1 1 30rem;
-    box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
-    border-radius: .5rem;
-    padding:3rem 2rem;
-    position: relative;
-    border:.1rem solid rgba(0,0,0,.1);
-}
-
-.review .box-container .box .fa-quote-right{
-    position: absolute;
-    bottom:3rem; right:3rem;
-    font-size: 6rem;
-    color:#eee;
-}
-
-.review .box-container .box .stars i{
-    color:var(--warna2);
-    font-size: 2rem;
-}
-
-.review .box-container .box p{
-    color:#999;
-    font-size: 1.5rem;
-    line-height: 1.5;
-    padding-top: 2rem;
-}
-
-.review .box-container .box .user{
-    display: flex;
+    justify-content: center;
     align-items: center;
-    padding-top: 2rem;
+    margin-top: 20px;
 }
-
-.review .box-container .box .user img{
-    height:6rem;
-    width:6rem;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 1rem;
+.products .display-none{
+    display: none;
 }
-
-.review .box-container .box .user h3{
+.jarak {
     font-size: 2rem;
-    color: var(--warna2);
+    text-align: center;
+    margin: 15rem;
 }
-
-.review .box-container .box .user span{
-    font-size: 1.5rem;
-    color:#999;
+.jarak p{
+    text-transform: none;
 }
+.products .pagination a {
+    display: inline-block;
+    padding: 5px 10px;
+    font-size: 1rem;
+    background-color: var(--warna1);
+    text-decoration: none;
+    color: var(--warna3);
+    border-radius: .3rem;
+    margin-right: 5px;
+    cursor: pointer;
+}
+.products .pagination a.active {
+    background-color: var(--warna2);
+    color: var(--warna1);
+}
+.products .pagination .pages{
+    display: inline-block;
+}
+/* end */
 
+
+
+/* start contact */
 .contact .row{
     display: flex;
     flex-wrap: wrap-reverse;
     gap:1.5rem;
     align-items: center;
 }
-
+.contact .row .display-none{
+    display: none;
+}
 .contact .row form{
     flex:1 1 40rem;
     padding:2rem 2.5rem;
     box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
     border:.1rem solid rgba(0,0,0,.1);
-    background: #fff;
+    background: var(--warna3);
     border-radius: .5rem;
 }
-
 .contact .row .image{
     flex:1 1 40rem;
 }
-
 .contact .row .image img{
     width: 100%;
 }
-
 .contact .row form .box{
     padding:1rem;
-    font-size: 1.7rem;
-    color: var(--warna2);
+    font-size: 1rem;
     text-transform: none;
-    border:.1rem solid rgba(0,0,0,.1);
+    border:.1rem solid rgba(255, 255, 255, 0.1);
     border-radius: .5rem;
-    margin:.7rem 0;
     width: 100%;
+    margin: .8rem;
+    color: var(--warna1);
+    background:var(--warna4);
 }
-
+::placeholder {
+    color: var(--warna1); /* Ganti dengan warna yang diinginkan */
+}
 .contact .row form .box:focus{
     border-color: var(--warna1);
 }
-
 .contact .row form textarea{
-    height: 15rem;
+    height: 8rem;
     resize: none;
 }
+/* End contact */
 
-.footer .box-container{
-    display: flex;
-    flex-wrap: wrap;
-    gap:1.5rem;
+
+
+/* Start Footer */
+.footer{
+    background: var(--warna3);
 }
-
-.footer .box-container .box{
-    flex:1 1 25rem;
-}
-
-.footer .box-container .box h3{
-    color: var(--warna2);
-    font-size: 2.5rem;
-    padding:1rem 0;
-}
-
-.footer .box-container .box a{
-    display: block;
-    color:#666;
-    font-size: 1.5rem;
-    padding:1rem 0;
-}
-
-.footer .box-container .box a:hover{
-    color:var(--warna1);
-    text-decoration: underline;
-}
-
-.footer .box-container .box  img{
-    margin-top: 1rem;
-}
-
 .footer .credit{
     text-align: center;
-    padding:1.5rem;
-    margin-top: 1.5rem;
-    padding-top: 2.5rem;
-    font-size: 2rem;
+    padding-top: 5rem;
+    font-size: 1rem;
     color: var(--warna1);
-    border-top: .1rem solid rgba(0,0,0,.1);
-    padding-bottom: 9rem;
+    border-top: .1rem solid rgba(255, 255, 255, 0.765);
 }
-
-.footer .credit span{
+.footer .credit a{
     color:var(--warna2);
 }
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -524,7 +365,7 @@ header .fa-bars{
     header .navbar a{
         margin:1.5rem;
         padding:1.5rem;
-        background:#fff;
+        background:var(--warna3);
         border:.1rem solid rgba(0,0,0,.1);
         display: block;
     }
